// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should override icon if set explicitly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.emotion-0:not(:root) {
  overflow: hidden;
}

.emotion-1 {
  width: 1.25rem;
  height: 1.25rem;
  display: inline-block;
  vertical-align: middle;
}

.emotion-3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: #f9bcc2;
}

.emotion-2 {
  margin-right: 0.75rem;
  color: #c42231;
}

<div
    class="emotion-3"
    data-chakra-component="CAlert"
    role="alert"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2"
      data-chakra-component="CAlertIcon"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
    
      <path
        d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
        fill="currentColor"
      />
      
    
    </svg>
  </div>
</DocumentFragment>
`;

exports[`should render correct variant styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.emotion-0:not(:root) {
  overflow: hidden;
}

.emotion-1 {
  width: 1.25rem;
  height: 1.25rem;
  display: inline-block;
  vertical-align: middle;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: #c2ebd4;
  margin-bottom: 0.5rem;
}

.emotion-2 {
  margin-right: 0.75rem;
  color: #3ea76a;
}

.emotion-7 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: #3ea76a;
  color: #fff;
  margin-bottom: 0.5rem;
}

.emotion-6 {
  margin-right: 0.75rem;
}

.emotion-11 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-left: 0.75rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: #c2ebd4;
  border-left: 4px solid;
  border-color: #3ea76a;
  margin-bottom: 0.5rem;
}

.emotion-15 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.75rem;
  background-color: #c2ebd4;
  border-top: 4px solid;
  border-color: #3ea76a;
}

<div
    class="emotion-16"
    data-chakra-component="CStack"
  >
    <div
      class="emotion-3"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
    <div
      class="emotion-7"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="emotion-0 emotion-1 emotion-6"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
    <div
      class="emotion-11"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
    <div
      class="emotion-15"
      data-chakra-component="CAlert"
      role="alert"
    >
      <svg
        class="emotion-0 emotion-1 emotion-2"
        data-chakra-component="CAlertIcon"
        role="presentation"
        viewBox="0 0 24 24"
      >
        
    
        <g
          stroke="currentColor"
          strokewidth="1.5"
        >
          
      
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokelinecap="full"
          />
          
      
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="none"
            strokelinecap="full"
          />
          
      
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokemiterlimit="10"
          />
          
    
        </g>
        
    
      </svg>
      
        Data uploaded to the server. Fire on!
      
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-5 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  overflow: hidden;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  background-color: #afd0ff;
}

.emotion-2 {
  margin-right: 0.75rem;
  color: #0058e6;
}

.emotion-0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.emotion-0:not(:root) {
  overflow: hidden;
}

.emotion-1 {
  width: 1.25rem;
  height: 1.25rem;
  display: inline-block;
  vertical-align: middle;
}

.emotion-3 {
  font-weight: 700;
  line-height: normal;
}

<div
    class="emotion-5"
    data-chakra-component="CAlert"
    role="alert"
  >
    <svg
      class="emotion-0 emotion-1 emotion-2"
      data-chakra-component="CAlertIcon"
      role="presentation"
      viewBox="0 0 24 24"
    >
      
    
      <g
        stroke="currentColor"
        strokewidth="1.5"
      >
        
      
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokelinecap="full"
        />
        
      
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="none"
          strokelinecap="full"
        />
        
      
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokemiterlimit="10"
        />
        
    
      </g>
      
    
    </svg>
     
    <div
      class="emotion-3"
      data-chakra-component="CAlertTitle"
    >
      alert title
    </div>
     
    <div
      class="emotion-4"
      data-chakra-component="CAlertDescription"
    >
      alert description
    </div>
  </div>
</DocumentFragment>
`;
